# swgtracker-desktop

./: .gitignore  ROADMAP.md  SWG Tracker Desktop.spec  config.example.json  pyproject.toml  run_web.py
.claude/commands/: client.md  ship.md
.github/workflows/: release.yml
src/: main.py  utils.py  web_api.py
src/core/: alert_poller.py  api_client.py  bundle_manager.py  config_manager.py  dataset_sync.py  file_watcher.py  local_db.py  mail_monitor.py  ocr_engine.py  resource_tracker.py  scanner.py  win_overlay.py
src/gui/: alerts_tab.py  main_window.py  monitor_tab.py  resources_tab.py  sales_tab.py  schematics_tab.py  settings_tab.py  stockpile_tab.py  system_tray.py  theme.py
web/: index.html
web/css/: app.css
web/js/: alerts.js  app.js  characters.js  class_caps.js  factories.js  harvesters.js  help.js  insights.js  inventory.js  lab.js  mail.js  myschematics.js  purchases.js  resource.js  resources.js  sales.js  scanner.js  schematics.js  settings.js  shared.js  stockpile.js  wishlist.js
